// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`editTsconfig > should edit tsconfig config correctly: already_copied 1`] = `
"{
    \\"extends\\": \\"./.svelte-kit/tsconfig.json\\",
    \\"compilerOptions\\": {
        \\"rootDirs\\": [
            \\".\\",
            \\".svelte-kit/types\\",
            \\".schemas/types\\"
        ],
        \\"allowJs\\": true,
        \\"checkJs\\": true,
        \\"esModuleInterop\\": true,
        \\"forceConsistentCasingInFileNames\\": true,
        \\"resolveJsonModule\\": true,
        \\"skipLibCheck\\": true,
        \\"sourceMap\\": true,
        \\"strict\\": true
    },
    \\"include\\": [
        \\".svelte-kit/ambient.d.ts\\",
        \\".svelte-kit/types/**/$types.d.ts\\",
        \\"vite.config.ts\\",
        \\"src/**/*.js\\",
        \\"src/**/*.ts\\",
        \\"src/**/*.svelte\\",
        \\"src/**/*.js\\",
        \\"src/**/*.ts\\",
        \\"src/**/*.svelte\\",
        \\"tests/**/*.js\\",
        \\"tests/**/*.ts\\",
        \\"tests/**/*.svelte\\",
        \\".schemas/types\\"
    ]
    // Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
    //
    // If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
    // from the referenced tsconfig.json - TypeScript does not merge them in
}
"
`;

exports[`editTsconfig > should edit tsconfig config correctly: already_copied_but_modified 1`] = `
"{
    \\"extends\\": \\"./.svelte-kit/tsconfig.json\\",
    \\"compilerOptions\\": {
        \\"rootDirs\\": [
            \\".\\",
            \\".svelte-kit/types\\",
            \\".schemas/types\\",
            \\"userRootDir\\"
        ],
        \\"allowJs\\": true,
        \\"checkJs\\": true,
        \\"esModuleInterop\\": true,
        \\"forceConsistentCasingInFileNames\\": true,
        \\"resolveJsonModule\\": true,
        \\"skipLibCheck\\": true,
        \\"sourceMap\\": true,
        \\"strict\\": true
    },
    \\"include\\": [
        \\".svelte-kit/ambient.d.ts\\",
        \\".svelte-kit/types/**/$types.d.ts\\",
        \\"vite.config.ts\\",
        \\"src/**/*.js\\",
        \\"src/**/*.ts\\",
        \\"src/**/*.svelte\\",
        \\"src/**/*.js\\",
        \\"src/**/*.ts\\",
        \\"src/**/*.svelte\\",
        \\"tests/**/*.js\\",
        \\"tests/**/*.ts\\",
        \\"tests/**/*.svelte\\",
        \\".schemas/types\\"
    ]
    // Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
    //
    // If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
    // from the referenced tsconfig.json - TypeScript does not merge them in
}
"
`;

exports[`editTsconfig > should edit tsconfig config correctly: default_file 1`] = `
"{
        \\"extends\\": \\"./.svelte-kit/tsconfig.json\\",
        \\"compilerOptions\\": {
            \\"allowJs\\": true,
            \\"checkJs\\": true,
            \\"esModuleInterop\\": true,
            \\"forceConsistentCasingInFileNames\\": true,
            \\"resolveJsonModule\\": true,
            \\"skipLibCheck\\": true,
            \\"sourceMap\\": true,
            \\"strict\\": true,
            \\"rootDirs\\": [
                \\".\\",
                \\".svelte-kit/types\\",
                \\".schemas/types\\"
            ]
        },
        \\"include\\": [
            \\".svelte-kit/ambient.d.ts\\",
            \\".svelte-kit/types/**/$types.d.ts\\",
            \\"vite.config.ts\\",
            \\"src/**/*.js\\",
            \\"src/**/*.ts\\",
            \\"src/**/*.svelte\\",
            \\"tests/**/*.js\\",
            \\"tests/**/*.ts\\",
            \\"tests/**/*.svelte\\",
            \\".schemas/types\\"
        ]
        // Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
        //
        // If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
        // from the referenced tsconfig.json - TypeScript does not merge them in
    }
    "
`;

exports[`editTsconfig > should edit tsconfig config correctly: empty 1`] = `undefined`;

exports[`editTsconfig > should edit tsconfig config correctly: empty_obj 1`] = `
"{
    \\"include\\": [
        \\".svelte-kit/ambient.d.ts\\",
        \\".svelte-kit/types/**/$types.d.ts\\",
        \\"vite.config.ts\\",
        \\"src/**/*.js\\",
        \\"src/**/*.ts\\",
        \\"src/**/*.svelte\\",
        \\"tests/**/*.js\\",
        \\"tests/**/*.ts\\",
        \\"tests/**/*.svelte\\",
        \\".schemas/types\\"
    ],
    \\"compilerOptions\\": {
        \\"rootDirs\\": [
            \\".\\",
            \\".svelte-kit/types\\",
            \\".schemas/types\\"
        ]
    }
}"
`;

exports[`editTsconfig > should edit tsconfig config correctly: invalid_syntax 1`] = `undefined`;

exports[`editTsconfig > should edit tsconfig config correctly: with_include_another_thing 1`] = `
"{
    \\"extends\\": \\"./.svelte-kit/tsconfig.json\\",
    \\"compilerOptions\\": {
        \\"rootDirs\\": [
            \\".\\",
            \\".svelte-kit/types\\",
            \\".schemas/types\\"
        ],
        \\"allowJs\\": true,
        \\"checkJs\\": true,
        \\"esModuleInterop\\": true,
        \\"forceConsistentCasingInFileNames\\": true,
        \\"resolveJsonModule\\": true,
        \\"skipLibCheck\\": true,
        \\"sourceMap\\": true,
        \\"strict\\": true
    },
    \\"include\\": [
        \\"something\\",
        \\".schemas/types\\"
    ]
    // Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
    //
    // If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
    // from the referenced tsconfig.json - TypeScript does not merge them in
}
"
`;

exports[`editTsconfig > should edit tsconfig config correctly: with_include_another_thing_no_root_dirs 1`] = `
"{
    \\"extends\\": \\"./.svelte-kit/tsconfig.json\\",
    \\"compilerOptions\\": {
        \\"allowJs\\": true,
        \\"checkJs\\": true,
        \\"esModuleInterop\\": true,
        \\"forceConsistentCasingInFileNames\\": true,
        \\"resolveJsonModule\\": true,
        \\"skipLibCheck\\": true,
        \\"sourceMap\\": true,
        \\"strict\\": true,
        \\"rootDirs\\": [
            \\".\\",
            \\".svelte-kit/types\\",
            \\".schemas/types\\"
        ]
    },
    \\"include\\": [
        \\"something\\",
        \\".schemas/types\\"
    ]
    // Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
    //
    // If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
    // from the referenced tsconfig.json - TypeScript does not merge them in
}
"
`;

exports[`editTsconfig > should edit tsconfig config correctly: with_root_dir_already 1`] = `
"{
        \\"extends\\": \\"./.svelte-kit/tsconfig.json\\",
        \\"compilerOptions\\": {
            \\"rootDirs\\": [
                \\".\\",
                \\".svelte-kit/types\\",
                \\".schemas/types\\"
            ],
            \\"allowJs\\": true,
            \\"checkJs\\": true,
            \\"esModuleInterop\\": true,
            \\"forceConsistentCasingInFileNames\\": true,
            \\"resolveJsonModule\\": true,
            \\"skipLibCheck\\": true,
            \\"sourceMap\\": true,
            \\"strict\\": true
        },
        \\"include\\": [
            \\".svelte-kit/ambient.d.ts\\",
            \\".svelte-kit/types/**/$types.d.ts\\",
            \\"vite.config.ts\\",
            \\"src/**/*.js\\",
            \\"src/**/*.ts\\",
            \\"src/**/*.svelte\\",
            \\"tests/**/*.js\\",
            \\"tests/**/*.ts\\",
            \\"tests/**/*.svelte\\",
            \\".schemas/types\\"
        ]
        // Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
        //
        // If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
        // from the referenced tsconfig.json - TypeScript does not merge them in
    }
    "
`;

exports[`editTsconfig > should edit tsconfig config correctly: with_root_dir_already_lines 1`] = `
"{
        \\"extends\\": \\"./.svelte-kit/tsconfig.json\\",
        \\"compilerOptions\\": {
            \\"rootDirs\\": [
                \\".\\",
                \\".svelte-kit/types\\",
                \\".schemas/types\\",
                \\"userRootDir\\"
            ],
            \\"allowJs\\": true,
            \\"checkJs\\": true,
            \\"esModuleInterop\\": true,
            \\"forceConsistentCasingInFileNames\\": true,
            \\"resolveJsonModule\\": true,
            \\"skipLibCheck\\": true,
            \\"sourceMap\\": true,
            \\"strict\\": true
        },
        \\"include\\": [
            \\".svelte-kit/ambient.d.ts\\",
            \\".svelte-kit/types/**/$types.d.ts\\",
            \\"vite.config.ts\\",
            \\"src/**/*.js\\",
            \\"src/**/*.ts\\",
            \\"src/**/*.svelte\\",
            \\"tests/**/*.js\\",
            \\"tests/**/*.ts\\",
            \\"tests/**/*.svelte\\",
            \\".schemas/types\\"
        ]
        // Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
        //
        // If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
        // from the referenced tsconfig.json - TypeScript does not merge them in
    }
    "
`;
